Fix spacing in sheets bar in bootstrap theme, closes #5532

--- a/styles/web/kendo.common-bootstrap.less
+++ b/styles/web/kendo.common-bootstrap.less
@@ -135,8 +135,13 @@
     }
 }
 
+.k-spreadsheet-sheets-bar .k-link:first-child {
+    padding-right: 0;
+}
+
 .k-spreadsheet-sheets-bar .k-spreadsheet-sheets-remove {
     margin: 0;
+    padding: .65em .92em .65em .32em;
 }
 
 .k-button.k-spreadsheet-sheets-bar-add {
